--- a/_custom.html
+++ b/_custom.html
@@ -1,16 +1,10 @@
 <div class="sidebar-section custom">
   <h3>About</h3>
-  This blog explores reproducible finance with the 
-  <a href="https://www.r-project.org/">R</a> 
-  statistical computing environment.
+  This is June's Personal Blog
 </div>
 
 <div class="sidebar-section custom">
   <h3>Search</h3>
-  <form action="https://duckduckgo.com/">
-    <input type="text" name="q" placeholder="Search...">
-    <input type="hidden" name="sites" 
-      value="yjunechoe.github.io"> <!-- Replace with your blog URL -->
-    <!--<button type="submit">Search</button>-->
-  </form>
+  <script async src="https://cse.google.com/cse.js?cx=5004f2335f01c9f8e"></script>
+  <div class="gcse-search"></div>
 </div>
