migrate posts + about page

--- a/_custom.html
+++ b/_custom.html
@@ -1,6 +1,7 @@
 <div class="sidebar-section custom">
-  <h3>About</h3>
-  This is June's Personal Blog
+  <h3>About Me</h3>
+  I am a (computational) psycholinguist interested in modeling how people process linguistic information.
+  In my spare time, I enjoy blogging and learning about data visualization, science commucation, and #rstats.
 </div>
 
 <div class="sidebar-section custom">
