--- a/_custom.html
+++ b/_custom.html
@@ -1,6 +1,6 @@
 <div class="sidebar-section custom">
   <h3>About Me</h3>
-  I am a (computational) psycholinguist interested in modeling how people process linguistic information.
+  I am a (computational) psycholinguist interested in modeling how people process linguistic information, ambiguous signals in particular.
   In my spare time, I enjoy blogging and learning about data visualization, science commucation, and #rstats.
 </div>
 
