--- a/_custom.html
+++ b/_custom.html
@@ -1,7 +1,7 @@
 <div class="sidebar-section custom">
   <h3>About Me</h3>
   I am a (computational) psycholinguist interested in modeling how people parse linguistic information, ambiguous signals in particular.
-  In my spare time, I enjoy blogging about data visualization, science commucation, and #rstats.
+  In my spare time, I enjoy blogging about data visualization, science communication, and #rstats.
 </div>
 
 <div class="sidebar-section custom">
