favicon at index.html

--- a/etc/index.html
+++ b/etc/index.html
@@ -84,7 +84,7 @@ code span.wa { color: #008000; font-weight: bold; } /* Warning */
 
   <!--radix_placeholder_meta_tags-->
   <title>June Choe: Blog Posts</title>
-
+  <link rel="icon" type="image/png" href="static/img/icon.png">
 
 
 
