--- a/_custom.html
+++ b/_custom.html
@@ -1,6 +1,6 @@
 <div class="sidebar-section custom">
-  <h3>About Me</h3>
-  I am a (computational) psycholinguist interested in modeling how people parse linguistic information, ambiguous signals in particular.
+  <h3><a href="about.html">About Me</a></h3>
+  I am a (computational) psycholinguist interested in modeling how people parse linguistic input, especially those that contain structural ambiguities.
   In my spare time, I enjoy blogging about data visualization, science communication, and #rstats.
 </div>
 
