--- a/_custom.html
+++ b/_custom.html
@@ -1,11 +1,12 @@
 <div class="sidebar-section custom">
   <h3><a href="about.html">About Me</a></h3>
-  I am a (computational) psycholinguist interested in modeling how people parse linguistic input, especially those that contain structural ambiguities.
-  In my spare time, I enjoy blogging about data visualization and #rstats.
+  I am a (computational) psycholinguist interested in modeling how people parse linguistic input, especially those that contain structural ambiguities. In my spare time, I enjoy blogging about data visualization and #rstats.
 </div>
 
+<!-- Google Search=
 <div class="sidebar-section custom">
   <h3>Search</h3>
   <script async src="https://cse.google.com/cse.js?cx=5004f2335f01c9f8e"></script>
   <div class="gcse-search"></div>
 </div>
+ -->
