--- a/_custom.html
+++ b/_custom.html
@@ -1,6 +1,7 @@
 <div class="sidebar-section custom">
+  <img src="yjunechoe.github.io/static/img/pic.jpg" width="200" style="display:block; padding-bottom: 20px">
   <h3><a href="about.html">About Me</a></h3>
-  I am a (computational) psycholinguist interested in modeling how people parse linguistic input, especially those that contain structural ambiguities. In my spare time, I enjoy blogging about data visualization and #rstats.
+  I am a (computational) psycholinguist interested in modeling how people parse linguistic input, particularly those that contain structural ambiguities. In my spare time, I enjoy blogging about data visualization and #rstats.
 </div>
 
 <!-- Google Search=
