--- a/_custom.html
+++ b/_custom.html
@@ -1,5 +1,5 @@
 <div class="sidebar-section custom">
-  <img src="yjunechoe.github.io/static/img/pic.jpg" width="200" style="display:block; padding-bottom: 20px">
+  <img src="static/img/profile.png" width="200" style="display:block; padding-bottom: 20px">
   <h3><a href="about.html">About Me</a></h3>
   I am a (computational) psycholinguist interested in modeling how people parse linguistic input, particularly those that contain structural ambiguities. In my spare time, I enjoy blogging about data visualization and #rstats.
 </div>
