--- a/_posts/2020-09-20-plot-makeover-1/plot-makeover-1.html
+++ b/_posts/2020-09-20-plot-makeover-1/plot-makeover-1.html
@@ -33,7 +33,7 @@
   <meta property="og:title" content="Plot Makeover #1"/>
   <meta property="og:type" content="article"/>
   <meta property="og:description" content="Flattening a faceted grid for strictly horizontal comparisons"/>
-  <meta property="og:image" content="yjunechoe.github.io/plot-makeover-1_files/figure-html5/after_bar_plot-1.png"/>
+  <meta property="og:image" content="https://yjunechoe.github.io/plot-makeover-1_files/figure-html5/after_bar_plot-1.png"/>
   <meta property="og:image:width" content="1248"/>
   <meta property="og:image:height" content="768"/>
   <meta property="og:locale" content="en_US"/>
@@ -42,7 +42,7 @@
   <meta property="twitter:card" content="summary_large_image"/>
   <meta property="twitter:title" content="Plot Makeover #1"/>
   <meta property="twitter:description" content="Flattening a faceted grid for strictly horizontal comparisons"/>
-  <meta property="twitter:image" content="yjunechoe.github.io/plot-makeover-1_files/figure-html5/after_bar_plot-1.png"/>
+  <meta property="twitter:image" content="https://yjunechoe.github.io/plot-makeover-1_files/figure-html5/after_bar_plot-1.png"/>
   <meta property="twitter:image:width" content="1248"/>
   <meta property="twitter:image:height" content="768"/>
 
@@ -52,12 +52,12 @@
   <!--radix_placeholder_rmarkdown_metadata-->
 
   <script type="text/json" id="radix-rmarkdown-metadata">
-  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","description","categories","base_url","author","date","output","editor_options","bibliography"]}},"value":[{"type":"character","attributes":{},"value":["Plot Makeover #1"]},{"type":"character","attributes":{},"value":["Flattening a faceted grid for strictly horizontal comparisons\n"]},{"type":"character","attributes":{},"value":["plot makeover","data visualization","ggplot2"]},{"type":"character","attributes":{},"value":["yjunechoe.github.io"]},{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name","affiliation","affiliation_url"]}},"value":[{"type":"character","attributes":{},"value":["June Choe"]},{"type":"character","attributes":{},"value":["University of Pennsylvania Linguistics"]},{"type":"character","attributes":{},"value":["https://live-sas-www-ling.pantheon.sas.upenn.edu/"]}]}]},{"type":"character","attributes":{},"value":["09-20-2020"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["distill::distill_article"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["toc","self_contained"]}},"value":[{"type":"logical","attributes":{},"value":[true]},{"type":"logical","attributes":{},"value":[false]}]}]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["chunk_output_type"]}},"value":[{"type":"character","attributes":{},"value":["console"]}]},{"type":"character","attributes":{},"value":["biblio.bib"]}]}
+  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","description","categories","base_url","author","date","output","editor_options","bibliography"]}},"value":[{"type":"character","attributes":{},"value":["Plot Makeover #1"]},{"type":"character","attributes":{},"value":["Flattening a faceted grid for strictly horizontal comparisons\n"]},{"type":"character","attributes":{},"value":["plot makeover","data visualization","ggplot2"]},{"type":"character","attributes":{},"value":["https://yjunechoe.github.io"]},{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name","affiliation","affiliation_url"]}},"value":[{"type":"character","attributes":{},"value":["June Choe"]},{"type":"character","attributes":{},"value":["University of Pennsylvania Linguistics"]},{"type":"character","attributes":{},"value":["https://live-sas-www-ling.pantheon.sas.upenn.edu/"]}]}]},{"type":"character","attributes":{},"value":["09-20-2020"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["distill::distill_article"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["toc","self_contained"]}},"value":[{"type":"logical","attributes":{},"value":[true]},{"type":"logical","attributes":{},"value":[false]}]}]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["chunk_output_type"]}},"value":[{"type":"character","attributes":{},"value":["console"]}]},{"type":"character","attributes":{},"value":["biblio.bib"]}]}
   </script>
   <!--/radix_placeholder_rmarkdown_metadata-->
   
   <script type="text/json" id="radix-resource-manifest">
-  {"type":"character","attributes":{},"value":["biblio.bib","plot-makeover-1_files/bowser-1.9.3/bowser.min.js","plot-makeover-1_files/distill-2.2.21/template.v2.js","plot-makeover-1_files/figure-html5/after_bar_plot-1.png","plot-makeover-1_files/figure-html5/after_pointplot-1.png","plot-makeover-1_files/figure-html5/unnamed-chunk-3-1.png","plot-makeover-1_files/figure-html5/unnamed-chunk-4-1.png","plot-makeover-1_files/figure-html5/unnamed-chunk-5-1.png","plot-makeover-1_files/figure-html5/unnamed-chunk-6-1.png","plot-makeover-1_files/figure-html5/unnamed-chunk-7-1.png","plot-makeover-1_files/header-attrs-2.3/header-attrs.js","plot-makeover-1_files/jquery-1.11.3/jquery.min.js","plot-makeover-1_files/webcomponents-2.0.0/webcomponents.js","plot.png"]}
+  {"type":"character","attributes":{},"value":["biblio.bib","plot-makeover-1_files/bowser-1.9.3/bowser.min.js","plot-makeover-1_files/distill-2.2.21/template.v2.js","plot-makeover-1_files/figure-html5/after_bar_plot-1.png","plot-makeover-1_files/figure-html5/after_pointplot-1.png","plot-makeover-1_files/figure-html5/unnamed-chunk-3-1.png","plot-makeover-1_files/figure-html5/unnamed-chunk-4-1.png","plot-makeover-1_files/figure-html5/unnamed-chunk-5-1.png","plot-makeover-1_files/figure-html5/unnamed-chunk-6-1.png","plot-makeover-1_files/figure-html5/unnamed-chunk-7-1.png","plot-makeover-1_files/header-attrs-2.3/header-attrs.js","plot-makeover-1_files/header-attrs-2.4/header-attrs.js","plot-makeover-1_files/jquery-1.11.3/jquery.min.js","plot-makeover-1_files/webcomponents-2.0.0/webcomponents.js","plot.png"]}
   </script>
   <!--radix_placeholder_navigation_in_header-->
   <!--/radix_placeholder_navigation_in_header-->
@@ -945,7 +945,7 @@
   </script>
 
   <!--/radix_placeholder_distill-->
-  <script src="plot-makeover-1_files/header-attrs-2.3/header-attrs.js"></script>
+  <script src="plot-makeover-1_files/header-attrs-2.4/header-attrs.js"></script>
   <script src="plot-makeover-1_files/jquery-1.11.3/jquery.min.js"></script>
   <script src="plot-makeover-1_files/bowser-1.9.3/bowser.min.js"></script>
   <script src="plot-makeover-1_files/webcomponents-2.0.0/webcomponents.js"></script>
@@ -1097,6 +1097,9 @@ The original plot for comparison:
 <p>I actually couldn’t settle on one final product<a href="#fn2" class="footnote-ref" id="fnref2" role="doc-noteref"><sup>2</sup></a> so here are two plots that incorporate the changes that I wanted to make. I think that both look nice and you may prefer one style over the other depending on what relationships/comparisons you want your graph to emphasize.</p>
 <h3 id="point-line-plot">Point-line plot</h3>
 <div class="layout-chunk" data-layout="l-body-outset">
+<p><img src="plot-makeover-1_files/figure-html5/after_pointplot-1.png" width="624" /></p>
+</div>
+<div class="layout-chunk" data-layout="l-body">
 <pre class="r"><code>
 dodge &lt;- position_dodge(width = .5)
 
@@ -1145,9 +1148,11 @@ df %&gt;%
     panel.grid.major.y = element_blank()
     
   )</code></pre>
-<p><img src="plot-makeover-1_files/figure-html5/after_pointplot-1.png" width="624" /></p>
 </div>
 <h3 id="bar-plot">Bar plot</h3>
+<div class="layout-chunk" data-layout="l-body-outset">
+<p><img src="plot-makeover-1_files/figure-html5/after_bar_plot-1.png" width="624" data-distill-preview=1 /></p>
+</div>
 <div class="layout-chunk" data-layout="l-body">
 <pre class="r"><code>
 dodge &lt;- position_dodge(width = .5)
@@ -1195,9 +1200,6 @@ df %&gt;%
 <aside>
 In this second version, I removed <code>guides()</code> and distributed its arguments across <code>labs()</code> and <code>theme()</code>. I kinda like this layout of having a fat <code>theme()</code>. It’s also not too hard to read if you group and sort the arguments.
 </aside>
-<div class="layout-chunk" data-layout="l-body-outset">
-<p><img src="plot-makeover-1_files/figure-html5/after_bar_plot-1.png" width="624" data-distill-preview=1 /></p>
-</div>
 <div id="refs" class="references hanging-indent" role="doc-bibliography">
 <div id="ref-HusbandEtAl2020AMLaP">
 <p>Husband, E. Matthew, and Nikole Patson. 2020. <em>Priming of Implicatures Within and Between Categories: The Case of or</em>. AMLaP2020. <a href="https://amlap2020.github.io/a/272.pdf">https://amlap2020.github.io/a/272.pdf</a>.</p>
